# rgm

./: .gitignore  Cargo.toml  build.rs
src/: error.rs  lib.rs  main.rs
templates/: hello.rs.html
